welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:4: error: not found: value ef
ef faireV(c:Color){
^MethodsPictureLarge:4: error: not found: value c
ef faireV(c:Color){
          ^MethodsPictureLarge:6: error: not found: value c
  setCouleurBrosse(c)
                   ^MethodsPictureLarge:27: error: not found: value faireV
  faireV(Color.YELLOW)
  ^MethodsPictureLarge:28: error: not found: value faireV
  faireV(Color.RED)
  ^MethodsPictureLarge:29: error: not found: value faireV
  faireV(Color.BLUE)
  ^MethodsPictureLarge:30: error: not found: value faireV
  faireV(Color.GREEN)
  ^MethodsPictureLarge:83: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsPictureLarge'
override def run() {
             ^